--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jose": "^6.0.11",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
-    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "5.5.6",
